tests/compile-fail/negative_i32.stderr
error[E0599]: no method named `as_nonzero_unchecked` found for type `i32` in the current scope
 --> $DIR/negative_i32.rs:8:26
  |
8 |     let _a: NonZeroU32 = nonzero!(-2i32);
  |                          ^^^^^^^^^^^^^^^ method not found in `i32`
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
